# llm-zoomcamp-2026-code

./: .gitignore  README.md  notebook.ipynb  persistent_rag_ingest.ipynb  pyproject.toml  rag.ipynb  rag_helper.py  rag_ingest.ipynb  sqlite-ingest.ipynb
